fix(exercise-form): fix button container alignment

--- a/src/components/ui/ExerciseForm/ExerciseForm.scss
+++ b/src/components/ui/ExerciseForm/ExerciseForm.scss
@@ -2,10 +2,11 @@
 
 .button-container {
   width: 25%;
-  margin-top: 1em;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  align-self: center;
+  margin: 0 auto;
 
   > button {
     margin-top: 0;
